force-app/main/default/objects/APTS_Agreement__c/fields/Apttus__Parent_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Parent_Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Agreement</label>
    <referenceTo>APTS_Agreement__c</referenceTo>
    <relationshipLabel>Child Agreements</relationshipLabel>
    <relationshipName>Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>