force-app/main/default/objects/APTS_Agreement__c/fields/Apttus__Remaining_Contracted_Days__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Contracted_Days__c</fullName>
    <description>If the agreement is In Effect, this value is calculated as Contract Duration Days less Contracted Days</description>
    <formula>IF(AND(ISPICKVAL(Status_Category__c,&quot;In Effect&quot;), (Contract_Duration_Days__c &gt; 0), (Contracted_Days__c &gt; 0)), (Contract_Duration_Days__c - Contracted_Days__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Contracted Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>