force-app/main/default/objects/APTS_Agreement__c/fields/Apttus__Renewal_Notice_Date__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Notice_Date__c</fullName>
    <description>Issue Renewal Notice Date = End Date - Renewal Notice Days</description>
    <formula>IF( NOT( ISNULL( Contract_End_Date__c ) ) , Contract_End_Date__c  -  Renewal_Notice_Days__c  , NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewal Notice Date</label>
    <type>Date</type>
</CustomField>