force-app/main/default/objects/APTS_Agreement__c/fields/Apttus__Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Request_Date__c</fullName>
    <description>The date the agreement was requested</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Request Date</label>
    <type>Date</type>
</CustomField>