force-app/main/default/objects/APTS_Agreement__c/fields/Apttus__RetentionPolicyId__c.field-meta.xml
<CustomField>
    <fullName>RetentionPolicyId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The associated retention policy</description>
    <label>Retention Policy</label>
    <referenceTo>RetentionPolicy__c</referenceTo>
    <relationshipLabel>Agreements</relationshipLabel>
    <relationshipName>Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>