force-app/main/default/objects/APTS_Agreement__c/fields/Apttus__ReviewOfflineDocument__c.field-meta.xml
<CustomField>
    <fullName>ReviewOfflineDocument__c</fullName>
    <formula>IF (ISPICKVAL(Status_Category__c, &quot;Import&quot;), HYPERLINK(&quot;/apex/ReviewOfflineAgreement?id=&quot; &amp;Id &amp;&quot;&amp;name=&quot; &amp;Name, IMAGE(&quot;/resource/Button_ReviewOffline&quot;, &quot;Review Offline Document&quot;),&quot;_self&quot;), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Review Offline Document</label>
    <type>Text</type>
</CustomField>