force-app/main/default/objects/APTS_Agreement__c/fields/Apttus__RiskRatingIconPath__c.field-meta.xml
<CustomField>
    <fullName>RiskRatingIconPath__c</fullName>
    <description>Icon Path for the Risk Rating</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Icon Path for the Risk Rating</inlineHelpText>
    <label>Risk Rating Icon Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>