force-app/main/default/objects/APTS_Agreement__c/fields/Apttus__RiskRatingLevel__c.field-meta.xml
<CustomField>
    <fullName>RiskRatingLevel__c</fullName>
    <description>Risk Rating Level</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Risk Rating Level</inlineHelpText>
    <label>Risk Rating Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>