force-app/main/default/objects/APTS_Agreement__c/fields/Apttus__SendToTeamReview__c.field-meta.xml
<CustomField>
    <fullName>SendToTeamReview__c</fullName>
    <formula>IF (AND(OR(ISPICKVAL(Status_Category__c, &quot;In Signatures&quot;),(ISPICKVAL(Status_Category__c, &quot;In Authoring&quot;))),NOT(ISPICKVAL(Status__c,&quot;In Clause Approval&quot;))), HYPERLINK(&quot;/apex/SendForTeamReview?id=&quot; &amp;Id , IMAGE(&quot;/resource/Button_SendToTeamReview&quot;, &quot;Send For Teams Review&quot;),&quot;_self&quot;), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Send For Teams Review</label>
    <type>Text</type>
</CustomField>