force-app/main/default/objects/APTS_Agreement__c/fields/Apttus__Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Source of this contract – internal paper or third party contract</description>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Internal Paper</fullName>
                <default>true</default>
                <label>Internal Paper</label>
            </value>
            <value>
                <fullName>Other Party Paper</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>