force-app/main/default/objects/APTS_Agreement__c/fields/Apttus__Special_Terms__c.field-meta.xml
<CustomField>
    <fullName>Special_Terms__c</fullName>
    <description>Identifies any special terms related to contract</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Special Terms</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>