force-app/main/default/objects/APTS_Agreement__c/fields/Apttus__Submit_Request_Mode__c.field-meta.xml
<CustomField>
    <fullName>Submit_Request_Mode__c</fullName>
    <label>Submit Request Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Auto</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>