force-app/main/default/objects/APTS_Agreement__c/fields/Apttus__Subtype__c.field-meta.xml
<CustomField>
    <fullName>Subtype__c</fullName>
    <description>The subtype of the agreement for a given agreement type</description>
    <inlineHelpText>For Privacy Agreements only, Customer BAA is used when the sales rep is required to sign BAA to come onsite. 
**Not applicable to Customer Purchase Agreements or International Pricing Agreements</inlineHelpText>
    <label>Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>0.016’’ Stylet LMR</fullName>
            </value>
            <value>
                <fullName>Amendment</fullName>
            </value>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>Cost Estimate - Hospitals or Physicians</fullName>
            </value>
            <value>
                <fullName>Cost Estimate - Patient</fullName>
            </value>
            <value>
                <fullName>Credit Letter</fullName>
            </value>
            <value>
                <fullName>Customer BAA</fullName>
            </value>
            <value>
                <fullName>Customer Paper</fullName>
            </value>
            <value>
                <fullName>Default</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>DPA</fullName>
            </value>
            <value>
                <fullName>Ed Grant</fullName>
            </value>
            <value>
                <fullName>Fellowship Grant</fullName>
            </value>
            <value>
                <fullName>FMROU</fullName>
            </value>
            <value>
                <fullName>HFX Access BAA</fullName>
            </value>
            <value>
                <fullName>Inpatient Offer</fullName>
            </value>
            <value>
                <fullName>LMRiQ</fullName>
            </value>
            <value>
                <fullName>LMROU</fullName>
            </value>
            <value>
                <fullName>LMRTSM3</fullName>
            </value>
            <value>
                <fullName>LOP</fullName>
            </value>
            <value>
                <fullName>MSA</fullName>
            </value>
            <value>
                <fullName>MUO Letter</fullName>
            </value>
            <value>
                <fullName>MUO Offer</fullName>
            </value>
            <value>
                <fullName>OSEP</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Outpatient Offer</fullName>
            </value>
            <value>
                <fullName>PMDF</fullName>
            </value>
            <value>
                <fullName>Price Protect Agrmt.</fullName>
            </value>
            <value>
                <fullName>Pricing Agrmt.</fullName>
            </value>
            <value>
                <fullName>Pricing Table</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>