force-app/main/default/objects/APTS_Agreement__c/fields/Apttus__Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>Termination_Date__c</fullName>
    <description>Date contract terminated</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Termination Date</label>
    <type>Date</type>
</CustomField>