force-app/main/default/objects/APTS_Agreement__c/fields/Apttus__Termination_Notice_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Termination_Notice_Issue_Date__c</fullName>
    <description>Date termination notice was sent / received</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Exact date when the notification email is sent out as a reminder for the upcoming renewal=Agreement End Date” (Otherwise this would become a duplicate of Agreement End Date)</inlineHelpText>
    <label>Termination Notice Issue Date</label>
    <type>Date</type>
</CustomField>