force-app/main/default/objects/APTS_Agreement__c/fields/Apttus__TerminationComments__c.field-meta.xml
<CustomField>
    <fullName>TerminationComments__c</fullName>
    <description>Termination Comments</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Termination Comments</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>