force-app/main/default/objects/APTS_Agreement__c/fields/Apttus__TotalRiskScore__c.field-meta.xml
<CustomField>
    <fullName>TotalRiskScore__c</fullName>
    <description>Total Risk Score for the Agreement</description>
    <formula>IF( NOT(ISNULL(Risk_Rating__c )) &amp;&amp;  NOT(ISBLANK(RiskRatingIconPath__c)) &amp;&amp; NOT(ISBLANK(RiskRatingLevel__c )), IMAGE(RiskRatingIconPath__c, &quot;&quot;) + &apos; &apos; + TEXT(Risk_Rating__c ) +&apos; (&apos; + RiskRatingLevel__c  + &apos;)&apos; , &apos;&apos;)</formula>
    <inlineHelpText>Total Risk Score for the Agreement</inlineHelpText>
    <label>Total Risk Score</label>
    <type>Text</type>
</CustomField>