force-app/main/default/objects/APTS_Agreement__c/fields/Apttus__UploadSignedDocument__c.field-meta.xml
<CustomField>
    <fullName>UploadSignedDocument__c</fullName>
    <description>Upload Signed Document button to upload signed document back to the agreement.</description>
    <formula>IF(AND( ISPICKVAL(Status_Category__c,&quot;In Signatures&quot;), (ISPICKVAL(Status__c,&quot;Other Party Signatures&quot;) ) ), IF (OR ($User.UIThemeDisplayed == &apos;Theme4d&apos;, $User.UIThemeDisplayed == &apos;Theme4t&apos;, $User.UIThemeDisplayed == &apos;Theme4u&apos;) , HYPERLINK(&quot;/apex/LightningOfflineDocumentImport?action=UploadSignedDocument&amp;id=&quot; &amp;Id, IMAGE(&quot;/resource/Button_UploadSignedDocument&quot;, &quot;Upload Signed Document&quot;),&quot;_self&quot; ) , HYPERLINK(&quot;/apex/OfflineDocumentImport?action=UploadSignedDocument&amp;id=&quot; &amp;Id, IMAGE(&quot;/resource/Button_UploadSignedDocument&quot;, &quot;Upload Signed Document&quot;),&quot;_self&quot;) ) ,NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Upload Signed Document button to upload signed document back to the agreement.</inlineHelpText>
    <label>Upload Signed Document</label>
    <type>Text</type>
</CustomField>