force-app/main/default/objects/APTS_Agreement__c/fields/Apttus__Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <defaultValue>0</defaultValue>
    <description>THIS FIELD IS OBSOLETE.  PLEASE DO NOT USE IN SCREENS, REPORTS, ETC.</description>
    <label>Version (OBSOLETE)</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>