force-app/main/default/objects/APTS_Agreement__c/fields/Apttus_CMDSign__RecallESignatureRequest__c.field-meta.xml
<CustomField>
    <fullName>Apttus_CMDSign__RecallESignatureRequest__c</fullName>
    <description>Recall E-Signature request</description>
    <formula>IF(
	AND(
           ISPICKVAL(Status_Category__c,&quot;In Signatures&quot;), 
           ISPICKVAL(Status__c,&quot;Other Party Signatures&quot;) 
	   ),
HYPERLINK(&quot;/apex/Apttus_DocuApi__DocuSignRecallEnvByEnvId?envelopeparentid=&quot;&amp;Id, IMAGE(&quot;/resource/Apttus_DocuApi__RecallEnvelope&quot;,&quot;Recall E-Signature Document&quot;), &quot;_self&quot;),
NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Recall E-Signature request</inlineHelpText>
    <label>Recall E-Signature Request</label>
    <type>Text</type>
</CustomField>