force-app/main/default/objects/APTS_Agreement__c/fields/Apttus_CMDSign__SendForESignature__c.field-meta.xml
<CustomField>
    <fullName>Apttus_CMDSign__SendForESignature__c</fullName>
    <formula>IF(
AND(
OR(
ISPICKVAL(Status_Category__c,&quot;In Authoring&quot;),
(AND(ISPICKVAL(Status_Category__c,&quot;In Signatures&quot;),
ISPICKVAL(Status__c,&quot;Ready for Signatures&quot;)
)
),
(AND(ISPICKVAL(Status_Category__c,&quot;In Signatures&quot;),
ISPICKVAL(Status__c,&quot;Signature Declined&quot;)
)
)
),
NOT(ISPICKVAL(Status__c,&quot;In Clause Approval&quot;))),
HYPERLINK(&quot;/apex/Apttus_CMDSign__CMDocuSignCreateEnvelope?id=&quot;&amp;Id, IMAGE(&quot;/resource/Apttus_DocuApi__eSignature&quot;,&quot;Send For eSignatures&quot;), &quot;_self&quot;),
NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Send For eSignature</label>
    <type>Text</type>
</CustomField>