force-app/main/default/objects/APTS_Agreement__c/fields/Apttus_CMDSign__ViewESignatureDocument__c.field-meta.xml
<CustomField>
    <fullName>Apttus_CMDSign__ViewESignatureDocument__c</fullName>
    <description>Correct E-Signature document</description>
    <formula>IF(
	AND(
           ISPICKVAL(Status_Category__c,&quot;In Signatures&quot;), 
           ISPICKVAL(Status__c,&quot;Other Party Signatures&quot;) 
	),
HYPERLINK(&quot;/apex/Apttus_DocuApi__DocuSignViewExistingEnvelope?envelopeparentid=&quot;&amp;Id, IMAGE(&quot;/resource/Apttus_DocuApi__ViewEnvelope&quot;,&quot;Correct E-Signature Document&quot;), &quot;_blank&quot;),
NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Correct E-Signature document</inlineHelpText>
    <label>Correct E-Signature Document</label>
    <type>Text</type>
</CustomField>