force-app/main/default/objects/APTS_Agreement__c/fields/Associated_Costs_Fees__c.field-meta.xml
<CustomField>
    <fullName>Associated_Costs_Fees__c</fullName>
    <label>Associated Costs/Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>