force-app/main/default/objects/APTS_Agreement__c/fields/Best_Price_MFN__c.field-meta.xml
<CustomField>
    <fullName>Best_Price_MFN__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if Nevro agrees to give the customer the best pricing terms it makes available to any other buyer.</inlineHelpText>
    <label>Best Price / MFN</label>
    <type>Checkbox</type>
</CustomField>