force-app/main/default/objects/APTS_Agreement__c/fields/Blocked_Days_Negotiations__c.field-meta.xml
<CustomField>
    <fullName>Blocked_Days_Negotiations__c</fullName>
    <description>this is the total time that the agreement was on hold while status category = In negotiation</description>
    <inlineHelpText>this is the total time that the agreement was on hold while status category = In negotiation</inlineHelpText>
    <label>Total On Hold Days in Negotiations</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>