force-app/main/default/objects/APTS_Agreement__c/fields/Business_Items_Approved__c.field-meta.xml
<CustomField>
    <fullName>Business_Items_Approved__c</fullName>
    <inlineHelpText>Have you reviewed and approved the business items set forth in the agreement? Business items include (but are not limited to) pricing and payment terms, cancellation/termination rights, and what Nevro will receive.</inlineHelpText>
    <label>Business Items Approved?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>