force-app/main/default/objects/APTS_Agreement__c/fields/Business_Need_c__c.field-meta.xml
<CustomField>
    <fullName>Business_Need_c__c</fullName>
    <description>What is the legitimate business need for this Consultant?</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>What is the legitimate business need for this Consultant?</inlineHelpText>
    <label>Legitimate business need for consultant?</label>
    <type>TextArea</type>
</CustomField>