force-app/main/default/objects/APTS_Agreement__c/fields/Business_Originator__c.field-meta.xml
<CustomField>
    <fullName>Business_Originator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>On Behalf Of</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>