force-app/main/default/objects/APTS_Agreement__c/fields/Business_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>Business_Registration_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Business Registration Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>