force-app/main/default/objects/APTS_Agreement__c/fields/Calculated_Termination_Notice_Date__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Termination_Notice_Date__c</fullName>
    <formula>Contract_End_Date__c -  CASE( Termination_Notice_in_Days__c, &quot;30&quot;, 30, &quot;60&quot;, 60, &quot;90&quot;, 90, &quot;120&quot;, 120, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated Termination Notice Date</label>
    <type>Date</type>
</CustomField>