force-app/main/default/objects/APTS_Agreement__c/fields/CCO_Review__c.field-meta.xml
<CustomField>
    <fullName>CCO_Review__c</fullName>
    <label>CCO Review?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>